Some updates here and deer

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -1,30 +1,38 @@
 {
-  "uptime_current_uptime": "Current uptime: {uptime}",
+	"global_loading": "{emote_loading} Please wait",
 
-  "configure_missing_arg_setting": "{emote_warn} Missing required argument `setting`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable a command put disable inside of the <new value>`",
-  "configure_missing_arg_new_value": "{emote_warn} Missing required argument `new value`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable a command put disable inside of the <new value>`",
-  "configure_invalid_muterole": "{emote_warn} Invalid `role`",
-  "configure_default_help": "{emote_warn} Invalid `setting`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable command put disable inside of the <new value>`\n**Guild settings:** `prefix`, `track_analytics`\n**Logging settings:** `mod_action`, `message`, `role|role_update`, `member|member_update`, `channel|channel_update`, `join_leave`\n**Role settings:** `mute`",
-  "configure_muterole_changed": "{emote_success} Changed the muted role to `{role}` in **{guild}**",
-  "configure_prefix_change_successful": "{emote_success} Successfully updated the prefix to `{new_value}` in **{guild}**",
-  "configure_analytics_change_successful": "{emote_success} Successfully updated the stace of tracking analytics to `{new_value}` in **{guild}**",
-  "configure_analytics_change_invalid": "{emote_warn} Invalid value! Allowed values `true`, `false`",
-  "configure_mod_action_stop": "{emote_success} Stopped logging `mod actions` in **{guild}**",
-  "configure_channel_invalid": "{emote_warn} Invalid `channel`",
-  "configure_mod_action_successful": "{emote_success} Now logging `mod actions` in {new_value} in **{guild}**",
-  "configure_message_stop": "{emote_success} Stopped logging `message updates` in **{guild}**",
-  "configure_message_successful": "{emote_success} Now logging `message updates` in {new_value} in **{guild}**",
-  "configure_role_stop": "{emote_success} Stopped logging `role updates` in **{guild}**",
-  "configure_role_successful": "{emote_success} Now logging `role updates` in {new_value} in **{guild}**",
-  "configure_members_stop": "{emote_success} Stopped logging `member updates` in **{guild}**",
-  "configure_members_successful": "{emote_success} Now logging `member updates` in {new_value} in **{guild}**",
-  "configure_channels_stop": "{emote_success} Stopped logging `channel updates` in **{guild}**",
-  "configure_channels_successful": "{emote_success} Now logging `channel updates` in {new_value} in **{guild}**",
-  "configure_join_leave_stop": "{emote_success} Stopped logging `join/leave` in **{guild}**",
-  "configure_join_leave_successful": "{emote_success} Now logging `join/leave` in {new_value} in **{guild}**",
+	"uptime_current_uptime": "Current uptime: {uptime}",
 
-  "override_missing_arg_category": "{emote_warn} Missing required argument `category`\n{emote_tools} Correct usage of command: `override <category> <sub category>`\n**List of categories:** `command`, `role`",
-  "override_invalid_subcategory": "{emote_warn} Invalid `sub category`\n{emote_tools} Correct usage of command: `override command <sub category>`\n**List of sub categories:** `edit`, `add`, `disable`, `enable`",
-  "override_invalid_subcategory_edit_add": "{emote_warn} Invalid `sub category`\n{emote_tools} Correct usage of command: `override role <sub category>`\n**List of sub categories:** `edit`, `add`",
-  "override_invalid_category_subcategory": "{emote_warn} Invalid `category`\n{emote_tools} Correct usage of command: `override <category> <sub category>`\n**List of categories:** `command`, `role`\n**List of sub categories:** `edit`, `add`"
+	"configure_missing_arg_setting": "{emote_warn} Missing required argument `setting`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable a command put disable inside of the <new value>`",
+	"configure_missing_arg_new_value": "{emote_warn} Missing required argument `new value`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable a command put disable inside of the <new value>`",
+	"configure_invalid_muterole": "{emote_warn} Invalid `role`",
+	"configure_default_help": "{emote_warn} Invalid `setting`\n{emote_tools} Correct usage of command: `configure|cfg|setting|config <setting> <new value> | If you want to disable command put disable inside of the <new value>`\n**Guild settings:** `prefix`, `track_analytics`\n**Logging settings:** `mod_action`, `message`, `role|role_update`, `member|member_update`, `channel|channel_update`, `join_leave`\n**Role settings:** `mute`",
+	"configure_muterole_changed": "{emote_success} Changed the muted role to `{role}` in **{guild}**",
+	"configure_prefix_change_successful": "{emote_success} Successfully updated the prefix to `{new_value}` in **{guild}**",
+	"configure_analytics_change_successful": "{emote_success} Successfully updated the stace of tracking analytics to `{new_value}` in **{guild}**",
+	"configure_analytics_change_invalid": "{emote_warn} Invalid value! Allowed values `true`, `false`",
+	"configure_mod_action_stop": "{emote_success} Stopped logging `mod actions` in **{guild}**",
+	"configure_channel_invalid": "{emote_warn} Invalid `channel`",
+	"configure_mod_action_successful": "{emote_success} Now logging `mod actions` in {new_value} in **{guild}**",
+	"configure_message_stop": "{emote_success} Stopped logging `message updates` in **{guild}**",
+	"configure_message_successful": "{emote_success} Now logging `message updates` in {new_value} in **{guild}**",
+	"configure_role_stop": "{emote_success} Stopped logging `role updates` in **{guild}**",
+	"configure_role_successful": "{emote_success} Now logging `role updates` in {new_value} in **{guild}**",
+	"configure_members_stop": "{emote_success} Stopped logging `member updates` in **{guild}**",
+	"configure_members_successful": "{emote_success} Now logging `member updates` in {new_value} in **{guild}**",
+	"configure_channels_stop": "{emote_success} Stopped logging `channel updates` in **{guild}**",
+	"configure_channels_successful": "{emote_success} Now logging `channel updates` in {new_value} in **{guild}**",
+	"configure_join_leave_stop": "{emote_success} Stopped logging `join/leave` in **{guild}**",
+	"configure_join_leave_successful": "{emote_success} Now logging `join/leave` in {new_value} in **{guild}**",
+
+	"override_missing_arg_category": "{emote_warn} Missing required argument `category`\n{emote_tools} Correct usage of command: `override <category> <sub category>`\n**List of categories:** `command`, `role`",
+	"override_invalid_subcategory": "{emote_warn} Invalid `sub category`\n{emote_tools} Correct usage of command: `override command <sub category>`\n**List of sub categories:** `edit`, `add`, `disable`, `enable`",
+	"override_invalid_subcategory_edit_add": "{emote_warn} Invalid `sub category`\n{emote_tools} Correct usage of command: `override role <sub category>`\n**List of sub categories:** `edit`, `add`",
+	"override_invalid_category_subcategory": "{emote_warn} Invalid `category`\n{emote_tools} Correct usage of command: `override <category> <sub category>`\n**List of categories:** `command`, `role`\n**List of sub categories:** `edit`, `add`",
+
+	"overrides_missing_arg_category": "{emote_warn} Missing required argument `category`\n{emote_tools} Correct usage of command: `override <category>`\n**List of categorys:** `command`, `role`",
+	"overrides_with_clearance_level": "- `{cl_commandName}` with a clearance level of `{cL_CL}`",
+
+	
+	"charinfo_missing_arg_charcters": "{emote_warn} Missing required argument `characters` \n{emote_tools} Correct usage of command: `charinfo <characters>`"
 }
