--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -2,6 +2,7 @@
 	"global_loading": "{emote_loading} Please wait",
 	"global_user_not_found": "{emote_warn} Could not find the specified user `{user}`",
 	"global_error": "**An error has occurred**, please check the the permission level of the bot or try again later. If the issue persists contact the bot developers.",
+	"global_cannot_action_self": "{emote_warn} You cannot perform this action on yourself!",
 
 	"event_guild_member_add": "{emote_plus} New user joined the guild **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
 	"event_guild_member_remove": "{emote_minus} User has left **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
@@ -58,6 +59,21 @@
 	"infractiondm_failed": "{emote_warn} Could not DM **{user}** `{user_id}`! They very likely have their DMs turned off",
 	"infractiondm_sent": "{emote_success} Successfully sent an infraction DM to **{user}** `({user_id})`",
 	"infractiondm_sent_log": "{emote_warn} **{moderator}** `({moderator_id})` has sent an infraction DM to **{user}** `({user_id}})`\n**Content:** {reason}",
+
+	"mute_mute_role_not_found": "Unable to find a muted role in this server, please add one by doing `configure|cfg|setting|config mute <mutedRole>`",
+	"mute_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `mute <user> <duration> [reason]`\n**Duration:** `w = week`, `d = day`, `h = hour`, `m = minutes`, `s = seconds`",
+	"mute_missing_arg_duration": "{emote_warn} Missing required argument `duration`\n{emote_tools} Correct usage of command: `mute <user> <duration> [reason]`\n**Duration:** `w = week`, `d = day`, `h = hour`, `m = minutes`, `s = seconds`",
+	"mute_already_muted": "{emote_warn} **{user}**#{user_discriminator} `({user_id}) is already muted!`",
+	"mute_invalid_duration_second": "{emote_warn} Invalid `duration`, the time can also not be shorter than 1 second \n{emote_tools} Correct usage of command: `mute <user> <duration> [reason]`\n**Duration:** `w = week`, `d = day`, `h = hour`, `m = minutes`, `s = seconds`",
+	"mute_invalid_duration_year": "{emote_warn} Invalid `duration`, the time can also not be longer than 1 year \n{emote_tools} Correct usage of command: `mute <user> <duration> [reason]`\n**Duration:** `w = week`, `d = day`, `h = hour`, `m = minutes`, `s = seconds`",
+	"mute_muted": "{emote_mute} **{user}**#{user_discriminator} `({user_id})` has been muted by **{moderator}**#{moderator_discriminator} `({moderator_id})` for **{time}**",
+	"mute_muted_log": "{emote_mute} **{user}**#{user_discriminator} `({user_id})` has been muted by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Duration:** {time}",
+	"mute_unmuted": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been automatically unmuted after their mute expired.",
+	"mute_audit": "Automatic unmute",
+
+	"tempban_audit": "Automatic unban",
+	"tempban_unban": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been automatically unbanned after their ban expired.",
+
 
 	"charinfo_missing_arg_characters": "{emote_warn} Missing required argument `characters` \n{emote_tools} Correct usage of command: `charinfo <characters>`"
 }
