--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -3,6 +3,7 @@
 	"global_user_not_found": "{emote_warn} Could not find the specified user `{user}`",
 	"global_error": "**An error has occurred**, please check the the permission level of the bot or try again later. If the issue persists contact the bot developers.",
 	"global_cannot_action_self": "{emote_warn} You cannot perform this action on yourself!",
+	"global_missing_permission": ":lock: You do not have sufficient permission to perform this action!",
 
 	"event_guild_member_add": "{emote_plus} New user joined the guild **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
 	"event_guild_member_remove": "{emote_minus} User has left **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
@@ -80,6 +81,8 @@
 	"munban_fail": "{emote_warn} Unable to unban **{user}**#{user_discriminator} `(user_id)`",
 	"munban_success": "{emote_unban} Successfully unbanned {new_value} for {reason}",
 	"munban_log": "{emote_unban} Multiple users were unbanned {new_value} by **{moderator}**#{moderator_discriminator} `({moderator_id})`",
+
+	"infraction_remove_missing_arg_id": "{emote_warn} Missing required argument `id`\n{emote_tools} Correct usage of command: `infraction|inf delete|del|remove <id> [reason]`",
 
 	"charinfo_missing_arg_characters": "{emote_warn} Missing required argument `characters` \n{emote_tools} Correct usage of command: `charinfo <characters>`"
 }
