--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -90,6 +90,11 @@
 	"warn_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `warn <user> [reason]`",
 	"warn_success": "{emote_warn} **{user}**#{user_discriminator} `({user_id})` has been warned for `{reason}`",
 	"warn_log": "{emote_warn} **{user}**#{user_discriminator} `({user_id})` has been warned by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
+	
+	"kick_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `kick <user> [reason]`",
+	"kick_fail": "{emote_warn} Was unable to kick **{user}**#{user_discriminator} `({user_id})`",
+	"kick_log": "{emote_kick} **{user}**#{user_discriminator} `({user_id})` has been kicked by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
+	"kick_success": "{emote_kick} **{user}**#{user_discriminator} `({user_id})` has been banned for **{reason}**\n**Infraction ID:** {inf_number}",
 
 	"infraction_remove_missing_arg_id": "{emote_warn} Missing required argument `id`\n{emote_tools} Correct usage of command: `infraction|inf delete|del|remove <id> [reason]`",
 	"infraction_invalid_arg_option": "{emote_warn} Invalid `option`\n{emote_tools} Correct usage of command: `infraction|inf| <option>`\n**Options:** `search|msearch|modsearch`, `osearch|offedersearch`, `edit|update`, `claim`, `delete|del|remove`, `info`, `all|list`",
