--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -74,6 +74,11 @@
 	"mute_unmuted": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been automatically unmuted after their mute expired.",
 	"mute_audit": "Automatic unmute",
 
+	"unmute_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `unmute <user> [reason]`",
+	"unmute_fail": "{emote_warn} **{user}**{user_discriminator} `{user_id}` is currently not muted",
+	"unmute_success": "{emote_unban} Successfully unmuted **{user}**{user_discriminator} `({user_id})` for {reason}\n**Infraction ID:** {inf_number}",
+	"unmute_log": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been unmuted by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
+
 	"tempban_audit": "Automatic unban",
 	"tempban_unban": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been automatically unbanned after their ban expired.",
 
