--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -53,7 +53,10 @@
 	"overrides_enabled": "{emote_switchOn} Enabled",
 	"overrides_disabled": "{emote_switchOff} Disabled",
 
-	"infraction_missing_arg_option": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `infraction|inf search|msearch|modsearch <user>`",
+	"infraction_missing_arg_option": "{emote_warn} Missing required argument `option`\n{emote_tools} Correct usage of command: `infraction|inf <option>`\n**Options:** `search|msearch|modsearch`, `osearch|offedersearch`, `edit|update`, `claim`, `delete|del|remove`, `info`, `all|list`",
+	"infraction_invalid_arg_option": "{emote_warn} Invalid `option`\n{emote_tools} Correct usage of command: `infraction|inf <option>`\n**Options:** `search|msearch|modsearch`, `osearch|offedersearch`, `edit|update`, `claim`, `delete|del|remove`, `info`, `all|list`",
+	"infraction_no_infractions": "{emote_warn} This user doesn't appear to have any infractions!",
+	"infraction_remove_missing_arg_id": "{emote_warn} Missing required argument `id`\n{emote_tools} Correct usage of command: `infraction|inf delete|del|remove <id> [reason]`",
 
 	"infractiondm_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `infractiondm <user> <anonymous> <message>`",
 	"infractiondm_missing_arg_anonymous": "{emote_warn} Missing required argument `anonymous`\n{emote_tools} Correct usage of command: `infractiondm <user> <anonymous> <message>`",
@@ -86,7 +89,7 @@
 	"munban_fail": "{emote_warn} Unable to unban **{user}**#{user_discriminator} `(user_id)`",
 	"munban_success": "{emote_unban} Successfully unbanned {new_value} for {reason}",
 	"munban_log": "{emote_unban} Multiple users were unbanned {new_value} by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Infraction ID:** {inf_number}",
-	
+
 	"ban_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `ban|terminate|yeet <user> [reason]`",
 	"ban_fail": "{emote_warn} Was unable to ban **{user}**#{user_discriminator} `({user_id})`",
 	"ban_success": "{emote_ban} **{user}**#{user_discriminator} `({user_id})` has been banned for **{reason}**\n**Infraction ID:** {inf_number}",
@@ -95,15 +98,11 @@
 	"warn_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `warn <user> [reason]`",
 	"warn_success": "{emote_warn} **{user}**#{user_discriminator} `({user_id})` has been warned for `{reason}`\n**Infraction ID:** {inf_number}",
 	"warn_log": "{emote_warn} **{user}**#{user_discriminator} `({user_id})` has been warned by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
-	
+
 	"kick_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `kick <user> [reason]`",
 	"kick_fail": "{emote_warn} Was unable to kick **{user}**#{user_discriminator} `({user_id})`",
 	"kick_log": "{emote_kick} **{user}**#{user_discriminator} `({user_id})` has been kicked by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
 	"kick_success": "{emote_kick} **{user}**#{user_discriminator} `({user_id})` has been banned for **{reason}**\n**Infraction ID:** {inf_number}",
-
-	"infraction_remove_missing_arg_id": "{emote_warn} Missing required argument `id`\n{emote_tools} Correct usage of command: `infraction|inf delete|del|remove <id> [reason]`",
-	"infraction_invalid_arg_option": "{emote_warn} Invalid `option`\n{emote_tools} Correct usage of command: `infraction|inf| <option>`\n**Options:** `search|msearch|modsearch`, `osearch|offedersearch`, `edit|update`, `claim`, `delete|del|remove`, `info`, `all|list`",
-	"infraction_no_infractions": "{emote_warn} This user doesn't appear to have any infractions!",
 
 	"charinfo_missing_arg_characters": "{emote_warn} Missing required argument `characters` \n{emote_tools} Correct usage of command: `charinfo <characters>`"
 }
