--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -4,6 +4,7 @@
 	"global_error": "**An error has occurred**, please check the the permission level of the bot or try again later. If the issue persists contact the bot developers.",
 	"global_cannot_action_self": "{emote_warn} You cannot perform this action on yourself!",
 	"global_missing_permission": ":lock: You do not have sufficient permission to perform this action!",
+	"global_operation_cancel": "{emote_warn} Cancelling operation",
 
 	"event_guild_member_add": "{emote_plus} New user joined the guild **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
 	"event_guild_member_remove": "{emote_minus} User has left **{user}**#{user_discriminator} `({user_id})` - **Account age:** {age} days",
@@ -91,6 +92,13 @@
 	"munban_fail": "{emote_warn} Unable to unban **{user}**#{user_discriminator} `(user_id)`",
 	"munban_success": "{emote_unban} Successfully unbanned {new_value} for {reason}",
 	"munban_log": "{emote_unban} Multiple users were unbanned {new_value} by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Infraction ID:** {inf_number}",
+	
+	"unban_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `unban|pardon <user> [reason]`",
+	"unban_fail": "{emote_warn} User `{user}` is not in the server or has not been banned yet!",
+	"unban_fail_2": "{emote_warn} Unable to unban **{user}**#{user_discriminator} `(user_id)`",
+	"unban_confirm": "Are you sure you want to unban **{user}**#{user_discriminator} `({user_id})`?",
+	"unban_success": "{emote_unban} Successfully unbanned **{user}**#{user_discriminator} `({user_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
+	"unban_log": "{emote_unban} **{user}**#{user_discriminator} `({user_id})` has been unbanned by **{moderator}**#{moderator_discriminator} `({moderator_id})`\n**Reason:** {reason}\n**Infraction ID:** {inf_number}",
 
 	"ban_missing_arg_user": "{emote_warn} Missing required argument `user`\n{emote_tools} Correct usage of command: `ban|terminate|yeet <user> [reason]`",
 	"ban_fail": "{emote_warn} Was unable to ban **{user}**#{user_discriminator} `({user_id})`",
